# Aurora

./: README.md  pyproject.toml
core/: aurora.py
core/actions/register/: register_employee.py
core/embeddings/: embedding_loader.py  embedding_manager.py  embedding_processor.py
data/: employees.json
data/configs/: supermarket_config.yaml
data/employees/: employee_interaction.json
data/intentions/: intent_actions.yaml  responses.yaml
integrations/firebase/: firestore_operations.py
integrations/redis/: redis_manager.py
integrations/redis_modules/: redis_connection.py  redis_manager.py
pretrained_models/: hyperparams.yaml
pretrained_models/EncoderClassifier-8f6f7fdaa9628acf73e21ad1f99d5f83/: classifier.ckpt  embedding_model.ckpt  label_encoder.ckpt  mean_var_norm_emb.ckpt
pretrained_models/EncoderClassifier-e3dcc8e5060144ec1668cd02c05772cd/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
utils/audio/: audio_utils.py  voice_recognition.py  voice_vectorizer.py
utils/helpers/: general_helpers.py
utils/nlp/: text_processing.py
utils/supermarket/: generate_supermarket_id.py
validators/: data_cleaner.py  date_validator.py  document_validator.py  text_validator.py  validators.py
